Update to 1.20, cleanup config, rework how graves are displayed